// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferConfirmationCard renders correctly for faucet drilldown 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
      Object {
        "marginVertical": 20,
        "minWidth": 562.5,
        "paddingHorizontal": 20,
        "paddingVertical": 40,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../packages/mobile/src/images/coins-logo.png",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "height": 40,
        "marginVertical": 20,
        "width": 40,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": "#81868B",
            "fontSize": 28,
            "lineHeight": 39,
            "transform": Array [
              Object {
                "translateY": 3,
              },
            ],
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "paddingHorizontal": 3,
          },
          Object {
            "color": "#81868B",
            "fontSize": 48,
            "lineHeight": 62,
          },
        ]
      }
    >
      133.00
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Light",
        "fontSize": 14,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
  >
    receiveFlow8:receivedAmountFromCelo.0
    $
    100.00
    receiveFlow8:receivedAmountFromCelo.1
  </Text>
</View>
`;

exports[`TransferConfirmationCard renders correctly for received escrow transaction drilldown 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
      Object {
        "marginVertical": 20,
        "minWidth": 562.5,
        "paddingHorizontal": 20,
        "paddingVertical": 40,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      mobileNumber
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Light",
              "fontSize": 14,
              "textAlignVertical": "center",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "#EEEEEE",
              "borderRadius": 3,
              "justifyContent": "center",
              "marginRight": 5,
              "paddingLeft": 6,
              "paddingRight": 3,
            },
          ]
        }
      >
        🇺🇸 +1
      </Text>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "textAlignVertical": "center",
          }
        }
      >
        (415) 555-0000
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": "#81868B",
            "fontSize": 28,
            "lineHeight": 39,
            "transform": Array [
              Object {
                "translateY": 3,
              },
            ],
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "paddingHorizontal": 3,
          },
          Object {
            "color": "#81868B",
            "fontSize": 48,
            "lineHeight": 62,
          },
        ]
      }
    >
      133.00
    </Text>
  </View>
</View>
`;

exports[`TransferConfirmationCard renders correctly for received transaction drilldown 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
      Object {
        "marginVertical": 20,
        "minWidth": 562.5,
        "paddingHorizontal": 20,
        "paddingVertical": 40,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      mobileNumber
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Light",
              "fontSize": 14,
              "textAlignVertical": "center",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "#EEEEEE",
              "borderRadius": 3,
              "justifyContent": "center",
              "marginRight": 5,
              "paddingLeft": 6,
              "paddingRight": 3,
            },
          ]
        }
      >
        🇺🇸 +1
      </Text>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "textAlignVertical": "center",
          }
        }
      >
        (415) 555-0000
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": "#81868B",
            "fontSize": 28,
            "lineHeight": 39,
            "transform": Array [
              Object {
                "translateY": 3,
              },
            ],
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "paddingHorizontal": 3,
          },
          Object {
            "color": "#81868B",
            "fontSize": 48,
            "lineHeight": 62,
          },
        ]
      }
    >
      133.00
    </Text>
  </View>
</View>
`;

exports[`TransferConfirmationCard renders correctly for sent escrow transaction drilldown 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
      Object {
        "marginVertical": 20,
        "minWidth": 562.5,
        "paddingHorizontal": 20,
        "paddingVertical": 40,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      mobileNumber
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Light",
              "fontSize": 14,
              "textAlignVertical": "center",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "#EEEEEE",
              "borderRadius": 3,
              "justifyContent": "center",
              "marginRight": 5,
              "paddingLeft": 6,
              "paddingRight": 3,
            },
          ]
        }
      >
        🇺🇸 +1
      </Text>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "textAlignVertical": "center",
          }
        }
      >
        (415) 555-0000
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": "#81868B",
            "fontSize": 28,
            "lineHeight": 39,
            "transform": Array [
              Object {
                "translateY": 3,
              },
            ],
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "paddingHorizontal": 3,
          },
          Object {
            "color": "#81868B",
            "fontSize": 48,
            "lineHeight": 62,
          },
        ]
      }
    >
      133.00
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Light",
          "fontSize": 14,
          "lineHeight": 18,
          "textAlign": "center",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
  >
    Rent request for June, it is already late!!!
  </Text>
</View>
`;

exports[`TransferConfirmationCard renders correctly for sent transaction drilldown 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
      Object {
        "marginVertical": 20,
        "minWidth": 562.5,
        "paddingHorizontal": 20,
        "paddingVertical": 40,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      mobileNumber
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Light",
              "fontSize": 14,
              "textAlignVertical": "center",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "#EEEEEE",
              "borderRadius": 3,
              "justifyContent": "center",
              "marginRight": 5,
              "paddingLeft": 6,
              "paddingRight": 3,
            },
          ]
        }
      >
        🇺🇸 +1
      </Text>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "textAlignVertical": "center",
          }
        }
      >
        (415) 555-0000
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": "#81868B",
            "fontSize": 28,
            "lineHeight": 39,
            "transform": Array [
              Object {
                "translateY": 3,
              },
            ],
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "paddingHorizontal": 3,
          },
          Object {
            "color": "#81868B",
            "fontSize": 48,
            "lineHeight": 62,
          },
        ]
      }
    >
      133.00
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Light",
          "fontSize": 14,
          "lineHeight": 18,
          "textAlign": "center",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
  >
    Rent request for June, it is already late!!!
  </Text>
</View>
`;

exports[`TransferConfirmationCard renders correctly for verification fee drilldown 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
      Object {
        "marginVertical": 20,
        "minWidth": 562.5,
        "paddingHorizontal": 20,
        "paddingVertical": 40,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../packages/mobile/src/images/coins-logo.png",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "height": 40,
        "marginVertical": 20,
        "width": 40,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginTop": 5,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "color": "#81868B",
            "fontSize": 28,
            "lineHeight": 39,
            "transform": Array [
              Object {
                "translateY": 3,
              },
            ],
          },
        ]
      }
    >
      $
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "Hind-Regular",
          },
          Object {
            "paddingHorizontal": 3,
          },
          Object {
            "color": "#81868B",
            "fontSize": 48,
            "lineHeight": 62,
          },
        ]
      }
    >
      0.39
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#81868B",
        "fontFamily": "Hind-Light",
        "fontSize": 14,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
  >
    receiveFlow8:verificationMessage
  </Text>
</View>
`;
